--- a/views/pages/about.pug
+++ b/views/pages/about.pug
@@ -11,7 +11,7 @@ block view
             .h4 Acerca de
             ul
               li
-                a(href='index.html') Inicio
+                a(href='index') Inicio
               li
                 span -
               li
@@ -82,13 +82,13 @@ block view
   section#about.section-wrapper.gray-background
     .container
       .row
-        .col-lg-4.heding-wrapper.text-center.scale-less.animate-in
+        //.col-lg-4.heding-wrapper.text-center.scale-less.animate-in
           span Los mejores precios,
           h2 SOMOS INTEGRADORES DE LA MARCA:
           span.spliter
           img(src='assets/images/schneider.png', alt='VISION')
 
-        .col-lg-8.heding-wrapper.text-center.scale-less.animate-in
+        //.col-lg-8.heding-wrapper.text-center.scale-less.animate-in
           h3 Politica de calidad, seguridad, salud y medio ambiente:
           iframe(src='assets/manual.pdf', frameborder='0', width='655', height='550', marginheight='0', marginwidth='0', id='pdf')
 
