--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -14,7 +14,7 @@ block view
                 .n2-ss-slide.n2-ss-canvas.n2-ow.n2-ss-slide-42(data-first='1', data-slide-duration='0', data-id='42', style='')
                   .n2-ss-slide-background.n2-ow(data-hash='f8ea37ea2bfd660ff66857e9c2170aef', data-desktop='assets/slider/images/slide-1.jpg', data-opacity='1', data-blur='0', data-mode='fill', data-x='50', data-y='50')
                     .n2-ss-slide-background-mask(style='')
-                      img(title='', src='assets/slider/images/slide-1.jpg', alt='')
+                      img(title='', src='assets/slider/images/1.jpg', alt='')
                   .n2-ss-layers-container.n2-ow(data-csstextalign='center', style='')
                     .n2-ss-section-outer(style='')
                       .n2-ss-layer.n2-ow(style='overflow:;', data-csstextalign='inherit', data-desktopportraitmaxwidth='0', data-cssselfalign='inherit', data-desktopportraitselfalign='inherit', data-pm='content', data-desktopportraitpadding='10|*|10|*|10|*|10|*|px+', data-desktopportraitinneralign='inherit', data-type='content', data-rotation='0', data-desktopportrait='1', data-desktoplandscape='1', data-tabletportrait='1', data-tabletlandscape='1', data-mobileportrait='1', data-mobilelandscape='1', data-adaptivefont='1', data-desktopportraitfontsize='100', data-plugin='rendered')
@@ -331,7 +331,7 @@ block view
       ul.row.services-container
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/12.jpg', alt='service1')
+            img.img-responsive(src='assets/images/servicios/redeselectrica.jpg', alt='service1')
             figcaption.info
               .table
                 .table-row
@@ -339,21 +339,10 @@ block view
                     .subtitle
                     .title REDES DE DISTRIBUCION ELECTRICA
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='solutions-electricity') Ves Mas
+                    a.btn.transparent.mt20(href='proyectocp03') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/15.jpg', alt='service2')
-            figcaption.info
-              .table
-                .table-row
-                  .table-cell.text-center.align-middle
-                    .subtitle
-                    .title INSTALACION Y VENTA DE PRODUCTOS DE SISTEMA PUESTA A TIERRA.
-                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='solutions-control') Ves Mas
-        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
-          figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/12.jpg', alt='service3')
+            img.img-responsive(src='assets/images/servicios/telecomu.jpg', alt='service3')
             figcaption.info
               .table
                 .table-row
@@ -361,30 +350,60 @@ block view
                     .subtitle 
                     .title TELECOMUNICACIONES
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='solutions-teleco') Ves Mas
+                    a.btn.transparent.mt20(href='proyectocp04') Ves Mas
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/14.jpg', alt='service4')
+            img.img-responsive(src='assets/images/servicios/aireacon.png', alt='service4')
             figcaption.info
               .table
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle 
-                    .title SANEAMIENTO
+                    .title SISTEMA DE AIRE ACONDICIONADO
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='solutions-sanea') Ves Mas
+                    a.btn.transparent.mt20(href='proyectocp09') Ves Mas
+        
+        
+        
+
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/servicios/pozotierra.png', alt='service2')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle
+                    .title INSTALACION Y VENTA DE PRODUCTOS PARA UN SISTEMA PUESTA A TIERRA.
+                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    a.btn.transparent.mt20(href='proyectocp10') Ves Mas
+               
+        li.col-lg-4.col-md-4.col-sm-6.col-xs-12
+          figure.imghvr-shutter-out-horiz
+            img.img-responsive(src='assets/images/servicios/videovigi.png', alt='service4')
+            figcaption.info
+              .table
+                .table-row
+                  .table-cell.text-center.align-middle
+                    .subtitle 
+                    .title SISTEMA DE VIDEO VIGILANCIA
+                    .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
+                    a.btn.transparent.mt20(href='proyectocp11') Ves Mas
         
         li.col-lg-4.col-md-4.col-sm-6.col-xs-12
           figure.imghvr-shutter-out-horiz
-            img.img-responsive(src='assets/images/servicios/14.jpg', alt='service4')
+            img.img-responsive(src='assets/images/servicios/capacita.png', alt='service4')
             figcaption.info
               .table
                 .table-row
                   .table-cell.text-center.align-middle
                     .subtitle 
-                    .title TARIFICADORES
+                    .title CAPACITACIONES
                     .description Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (transformadores y electro ductos).
-                    a.btn.transparent.mt20(href='solutions-tarificadores') Ves Mas
+                    a.btn.transparent.mt20(href='proyectocp12') Ves Mas
+        
+
+                    
  
   // SERVICES SECTION END
   // SPECILIZE SECTION START
@@ -875,61 +894,197 @@ block view
       .row
         .col-lg-12.heding-wrapper.text-center.scale-less.animate-in
           span Galeria
-          h2 SOLUCIONES EN MARCAS
+          h2 MARCAS COMERCIALIZADAS
           span.spliter
     .portfolio-wrapper
       .portfolio-list.grid
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/ABB.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/nortel.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle  
-                      .title ABB
+                      .title NORTEL networks
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/ALLEN_BRADLEY.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/samsung.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title ALLEN BRADLEY
+                      .title SAMSUNG
         .item.photos
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/SIEMENS.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/polycom.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title SIEMENS
+                      .title POLYCOM
         .item.print
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/RITTAL.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/plantonics.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
-                      .title RITTAL
+                      .title PLANTRONICS
                       .description 
                       
         .item.web
           .view.view-fourth
             figure.imghvr-shutter-out-vert
-              img.img-responsive(alt='portfolio-img', src='assets/images/ROCKWELL.png')
+              img.img-responsive(alt='portfolio-img', src='assets/images/amp.png')
               figcaption.mask
                 .table
                   .table-row
                     .table-cell.text-center.align-middle
                       .subtitle 
-                      .title ROCKWELL
+                      .title AMP
+
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/controlpbx.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title CONTROL PBX    
+
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/zycoo.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title ZYCOO
+
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/erico.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title ERICO GEM
+
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/indeco.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title INDECO
+
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/bticino.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title BTICINO
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/carrier.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title CARRIER
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/lennox.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title LENNOX
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/york.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title YORK
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/hikvision.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title HIKVISION
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/alhua.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title ALHUA
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/yealink.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title YEALINK
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/yeastar.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title YEASTAR
+        .item.web
+          .view.view-fourth
+            figure.imghvr-shutter-out-vert
+              img.img-responsive(alt='portfolio-img', src='assets/images/intelbras.png')
+              figcaption.mask
+                .table
+                  .table-row
+                    .table-cell.text-center.align-middle
+                      .subtitle 
+                      .title INTELBRAS
+                                                                                                                                                                                                     
         
 
     .clearfix
