--- a/views/pages/proyecto09.pug
+++ b/views/pages/proyecto09.pug
@@ -10,7 +10,7 @@ block view
             .h4 AIRE ACONDICIONADO
             ul
               li
-                a(href='index.html') AMPLIACIÓN Y MEJORAMIENTO DEL SISTEMA DE AGUA POTABLE Y ALCANTARILLADO DEL DISTRITO DE PILLCOMARCA – HUÁNUCO.
+                a(href='index.html') INSTALACION DE SISTEMAS DE AIRE ACONDICIONADO.
           
   // PAGE CONTENT START
   section.page-content.detail-page
@@ -18,22 +18,14 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-          img(src='assets/images/proyecto/proyecto08.jpg', alt='services-detail-img', style='text-align:center')
+          img(src='assets/images/servicios/aireacon.png', alt='services-detail-img', style='center')
+          img(src='assets/images/proyecto/aireacondicionado.jpg', alt='services-detail-img', style='center')
           p
-            | INSTALACIÓN HIDRÁULICA, ELECTROMECÁNICAS, SISTEMA DE CONTROL, MEDICIÓN Y TELEMETRÍA DE LA ESTACIÓN DE BOMBEO EB1 Y LOS RESERVORIOS RP-02 y RP-03 DE LA OBRA DEL PROYECTO.
+            | EMPRESA CAPACITA ALA IMPLEMENTACION I/O MATENIMIENTO DE SISTEMAS DE AIRE ACONDICIONADO.
 
           h3 ALCANCE DEL PROYECTO:
           ul
-            li 
-              | Verificación y Optimización del diseño del Sistema de Bombeo de la Estación EB-01.
-            li  
-              | Elaboración del Expediente Técnico del Sistema de Bombeo que incluye: El diseño de las Bombas, Sistema de Control, Instrumentación, Medición, Árbol de descargas y Telemetría. 
+            |  Equipos de aire acondicionado de las mejores marcas mundialmente conocidas como LG, CARRIER, LENNOX, YORK, para el hogar, laboratorios, centros de control industriales, oficinas, y salas de servidores.
+            |  sistemas de aire acondicionado que brindan un control fiable, preciso y eficiente de la temperatura, humedad y flujo de aire, especialmente en ambientes de sala de servidores, para un funcionamiento apropiado de los equipos electrónicos críticos. Estos sistemas ofrecen una alta eficiencia energética y control amigable para el usuario.
 
-            li 
-              | Ejecución de las Obras Relativas al Sistema de Bombeo que comprendía el equipamiento de las Estaciones de Bombeo EB-01 y los Reservorios RP-02 y RP-03.
-
-            li 
-              | Pruebas de operación de las Bombas y Puesta en Marcha del Sistema.
-            li 
-              | Capacitación del personal de mantenimiento y personal encargado.
 
