--- a/views/pages/solutions-control.pug
+++ b/views/pages/solutions-control.pug
@@ -1,7 +1,7 @@
 extends ../layout/home.pug
 block view
   // HEADER END
-  section.featured-img.text-center.services-bg
+  section.featured-img.text-center.iniciogeneral-bg
     .overlay
     .breadcrumbs
       .table.width-100p.height-100p
@@ -25,12 +25,14 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-            img(src='assets/images/soluciones/control.jpg', alt='services-detail-img')
+            
           p
-            | Diseño, fabricacion, montaje, pruebas y puesta en servicio de sistemas de control para industrias y obras de agua potable.
+            | Diseño, fabricacion, montaje, pruebas y puesta en servicio de sistemas con equipos telefonicos digitales y equipos telefonicos ip.
 
           ul
             li 
               | Suministro y montaje de tableros de control, cableado, conexionado pruebas y puesta en marcha.
+              img(src='assets/images/soluciones/centraltelefonicaPortada.jpg', alt='services-detail-img')
             li  
               | Sistemas scada.
+              
