--- a/views/pages/solutions-electricity.pug
+++ b/views/pages/solutions-electricity.pug
@@ -1,7 +1,7 @@
 extends ../layout/home.pug
 block view
   // HEADER END
-  section.featured-img.text-center.services-bg
+  section.featured-img.text-center.iniciogeneral-bg
     .overlay
     .breadcrumbs
       .table.width-100p.height-100p
@@ -27,21 +27,116 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-            img(src='assets/images/soluciones/electricidad.jpg', alt='services-detail-img')
+            img(src='assets/images/imgCENTRALES.png', alt='services-detail-img')
           p
-            | Diseño, ingeniería, instalacion, pruebas y puesta en servicio de los sitemas de media tension (celdas de media tension, transformadores y electro ductos). 
-          p
-            | Distribucion en baja tension (tableros de suministro electrico y banco de condensadores).
+            | Conoce nuestros productos de las mejores marcas y la gran variedad de modelos.
+            ul
+              
+                img(style='float:left' src='assets/images/materiales.png') 
+                p 
+                    | hola ingeniero
+  section.featured-img.text-center.iniciovariado-bg
+    .overlay
+    .breadcrumbs
+      .table.width-100p.height-100p
+        .table-row
+          .table-cell.align-middle
+            .h4 CENTRALES TELEFONICAS
+            ul
+              li
+                span 
+              li
+                span 
+              li
+                span centrales telefonicas
 
-          ul
-            li 
-              | Sistemas de proteccion, puesta a tierra, sistemas de iluminacion y distribucion de redes electricas.
-            li  
-              | Fabricacion de tableros de fuerza.
-            li  
-              | Instalacion de bandejas y tendidos de cables enmedia y baja tension.
-            li  
-              | Mediciones y pruebas.
+  section.featured-img.text-center.iniciovariado-bg
+    .overlay
+    .breadcrumbs
+      .table.width-100p.height-100p
+        .table-row
+          .table-cell.align-middle
+            .h4 CENTRALES TELEFONICAS
+            ul
+              li
+                img(style='float:left' src='assets/images/c7070.png')
+                span 
+              li
+                span 
+              li
+                span centrales telefonicas
+  section.featured-img.text-center
+    .overlay
+    .breadcrumbs
+      .table.width-100p.height-100p
+        .table-row
+          .table-cell.align-middle
+            .h4 CENTRALES TELEFONICAS
+            ul
+              li
+                span 
+              li
+                span 
+              li
+                span centrales telefonicas                            
+  section.featured-img.text-center
+    .overlay
+    .breadcrumbs
+      .table.width-100p.height-100p
+        .table-row
+          .table-cell.align-middle
+            .h4 CENTRALES TELEFONICAS
+            ul
+              li
+                span 
+              li
+                span 
+              li
+                span centrales telefonicas                            
+  section.featured-img.text-center
+    .overlay
+    .breadcrumbs
+      .table.width-100p.height-100p
+        .table-row
+          .table-cell.align-middle
+            .h4 CENTRALES TELEFONICAS
+            ul
+              li
+                span 
+              li
+                span 
+              li
+                span centrales telefonicas                            
+  section.featured-img.text-center
+    .overlay
+    .breadcrumbs
+      .table.width-100p.height-100p
+        .table-row
+          .table-cell.align-middle
+            .h4 CENTRALES TELEFONICAS
+            ul
+              li
+                span 
+              li
+                span 
+              li
+                span centrales telefonicas                            
+  section.featured-img.text-center
+    .overlay
+    .breadcrumbs
+      .table.width-100p.height-100p
+        .table-row
+          .table-cell.align-middle
+            .h4 CENTRALES TELEFONICAS
+            ul
+              li
+                span 
+              li
+                span 
+              li
+                span centrales telefonicas                            
+                                     
+         
           //.row
             .col-md-6
               img.img-responsive(src='assets/images/services-deteils-2.jpg', alt='services-detail-img')
