--- a/views/pages/solutions-pozotierra.pug
+++ b/views/pages/solutions-pozotierra.pug
@@ -1,13 +1,13 @@
 extends ../layout/home.pug
 block view
   // HEADER END
-  section.featured-img.text-center.services-bg
+  section.featured-img.text-center.iniciogeneral-bg
     .overlay
     .breadcrumbs
       .table.width-100p.height-100p
         .table-row
           .table-cell.align-middle
-            .h4 MATERIALES PARA UN SISTEMA DE POZO A TIERRA
+            .h4 MATERIALES PARA PUESTA TIERRA
             ul
               li
                 a(href='index.html') Servicios y
@@ -18,18 +18,19 @@ block view
               li
                 span 
               li
-                span materiales para un sistema de poso a tierra 
+                span materiales para un sistema puesta tierra 
   // PAGE CONTENT START
   section.page-content.detail-page
     .container.page-content-wrapper
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-            img(src='assets/images/soluciones/telecomunicaciones.jpg', alt='services-detail-img')
+            img(src='assets/images/materiales.png', alt='services-detail-img')
             p 
                 | 
             ul
                 li
-                    | Diseño de radioenlaces, instalacion de torres y pruebas de enlaces.
-                li
-                    | Diseño, instalaciones y pruebas de sisteas de cableado estructurado para edificaciones.
+                  img(style='float:left' src='assets/images/materiales.png')
+                  
+                
+                    
