--- a/views/pages/solutions-sanea.pug
+++ b/views/pages/solutions-sanea.pug
@@ -1,7 +1,7 @@
 extends ../layout/home.pug
 block view
   // HEADER END
-  section.featured-img.text-center.services-bg
+  section.featured-img.text-center.iniciogeneral-bg
     .overlay
     .breadcrumbs
       .table.width-100p.height-100p
@@ -25,9 +25,9 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-            img(src='assets/images/soluciones/saneamiento.jpg', alt='services-detail-img')
+            img(src='assets/images/vinchas.jpg', alt='services-detail-img')
           p
-            | Obras de agua potable y Alcantarillado
+            | Obras de agua potable y jklkjljljljljljljljjlkjAlcantarillado
           p
             | Sistema Electrico:
           ul
@@ -39,7 +39,7 @@ block view
             | Sistema Hidraulico:
           ul
             li 
-                | Suministro y montaje de tableros de control, cableado, conexionado pruebas y puesta en marcha.
+                | Suministro y montaje de tableros de cjkhkjhjkhkjhkjhjkhhhhhhhhhhhhhhhhhhhjkhhhjhkjhkhkhkjhkhkhkhkjhkhkhkhkhkhkontrol, cableado, conexionado pruebas y puesta en marcha.
             li 
                 | Sistemas scada.
           p
