--- a/views/pages/solutions-teleco.pug
+++ b/views/pages/solutions-teleco.pug
@@ -1,7 +1,7 @@
 extends ../layout/home.pug
 block view
   // HEADER END
-  section.featured-img.text-center.services-bg
+  section.featured-img.text-center.iniciogeneral-bg
     .overlay
     .breadcrumbs
       .table.width-100p.height-100p
@@ -25,7 +25,7 @@ block view
       .row
         .col-sm-10.col-sm-push-1
           .detail-page-feature
-            img(src='assets/images/soluciones/telecomunicaciones.jpg', alt='services-detail-img')
+            img(src='assets/images/soluciones/videovigilanciaPortada.png', alt='services-detail-img')
             p 
                 | 
             ul
