--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -45,7 +45,7 @@ section.top-bar
             span Nosotros
        
         li.has-sub
-          a.btn-7(href='solutions-electricity')
+          a.btn-7(href='solutions-electricitycp')
             span
               | Productos
               i.fa.fa-caret-down(aria-hidden='true')
@@ -60,9 +60,9 @@ section.top-bar
               li
                 a(href='solutions-saneaccp')  VINCHAS Y HEADSETS
               li
-                a(href='solutions-tarificadoresccp') TARIFICADORES DE LLAMADA
+                a(href='solutions-tarificadorescp') TARIFICADORES DE LLAMADA
               li
-                a(href='solutions-pozotierracp') MATERIALES PARA POZO A TIERRA
+                a(href='solutions-pozotierracp') MATERIALES PARA PUESTA TIERRA
               li
                 a(href='solutions-aireacondicionadocp') SISTEMAS DE AIRE ACONDICIONADO
               li  
@@ -107,7 +107,7 @@ header
         .c-table.logo-container
           figure.c-row
             a.c-cell(href='index')
-              img(src='assets/images/logo-red.png', alt='logo-img')
+              img(src='assets/images/logoempresa.jpg', alt='logo-img')
       .col-lg-10.col-md-10.col-sm-2.col-xs-2
         .cd-primary-nav-trigger
           span.cd-menu-icon
@@ -123,22 +123,22 @@ header
               a.btn-7(href='team')
                 span NUESTROS CLIENTES
             li.wrap
-              a.btn-7(href='solutions-electricity')
+              a.btn-7(href='#')
                 span
                   | PRODUCTOS
                   i.fa.fa-caret-down(aria-hidden='true')
               .sub
                 ul
                   li
-                    a(href='solutions-electricity') CENTRALES TELEFONICAS
-                    a(href='solutions-control') EQUIPOS TELEFONICOS DIGITALES/IP
-                    a(href='solutions-teleco') EQUIPOS DE AUDIOCONFERENCIA
-                    a(href='solutions-sanea') VINCHAS Y HEADSETS
-                    a(href='solutions-tarificadores') TARIFICADORES DE LLAMADA
-                    a(href='solutions-pozotierra') MATERIALES PARA POZO A TIERRA
-                    a(href='solutions-aireacondicionado') SISTEMAS DE AIRE ACONDICIONADO
-                    a(href='solutions-videovigilancia') SISTEMAS DE VIDIO VIGILANCIA Y VOZ SOBRE IP
-                    a(href='solutions-accesorios') CABLES Y ACCESORIOS
+                    a(href='solutions-electricitycp') CENTRALES TELEFONICAS
+                    a(href='solutions-controlcp') EQUIPOS TELEFONICOS DIGITALES/IP
+                    a(href='solutions-telecocp') EQUIPOS DE AUDIOCONFERENCIA
+                    a(href='solutions-saneacp') VINCHAS Y HEADSETS
+                    a(href='solutions-tarificadorescp') TARIFICADORES DE LLAMADA
+                    a(href='solutions-pozotierracp') MATERIALES PARA PUESTA TIERRA
+                    a(href='solutions-aireacondicionadocp') SISTEMAS DE AIRE ACONDICIONADO
+                    a(href='solutions-videovigilanciacp') SISTEMAS DE VIDIO VIGILANCIA Y VOZ SOBRE IP
+                    a(href='solutions-accesorioscp') CABLES Y ACCESORIOS
             li.wrap
               a.btn-7(href='#')
                 span
