--- a/views/pages/solutions-aireacondicionado.pug
+++ b/views/pages/solutions-aireacondicionado.pug
@@ -1,7 +1,7 @@
 extends ../layout/home.pug
 block view
   // HEADER END
-  section.featured-img.text-center.services-bg
+  section.featured-img.text-center.iniciogeneral-bg
     .overlay
     .breadcrumbs
       .table.width-100p.height-100p
