--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -4,7 +4,7 @@ footer
     .row
       .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
         a.footer-logo(href='index.html')
-          img(src='assets/images/footer-logo-orange.png', falt='logo-img')
+          img(src='assets/images/logoempresa.jpg', falt='logo-img')
         div
           | Nuestras Redes sociales:
         ul
@@ -13,12 +13,10 @@ footer
               i.fa.fa-facebook
           li
             a(href='#')
-              i.fa.fa-twitter
+              i.fa.fa-linkedin
           
        
-          li
-            a(href='#')
-              i.fa.fa-flickr
+         
       .col-lg-3.col-md-3.col-sm-6.footer-left.col-footer
        
         div
@@ -80,7 +78,7 @@ a.scrollToTop(href='#')
     .color-section
       .section-title Colors scheme:
       .colors-list.items-switcher
-        .item.red.active(data-color-path='assets/css/colors/blue.css', data-logo-path='assets/images/logo-red.png', data-footer-logo-path='assets/images/footer-logo-red.png')
+        .item.red.active(data-color-path='assets/css/colors/blue.css', data-logo-path='assets/images/logoempresa.jpg', data-footer-logo-path='assets/images/footer-logoempresa.jpg')
         .item.blue(data-color-path='assets/css/colors/blue.css', data-logo-path='assets/images/logo-blue.png', data-footer-logo-path='assets/images/footer-logo-blue.png')
         .item.orange(data-color-path='assets/css/colors/orange.css', data-logo-path='assets/images/logo-orange.png', data-footer-logo-path='assets/images/footer-logo-orange.png')
         .item.green(data-color-path='assets/css/colors/green.css', data-logo-path='assets/images/logo-green.png', data-footer-logo-path='assets/images/footer-logo-green.png')
